--- a/views/admin/products/create.ejs
+++ b/views/admin/products/create.ejs
@@ -80,6 +80,16 @@
                                         Produtos inativos não são exibidos na loja.
                                     </div>
                                 </div>
+                                
+                                <div class="mb-3">
+                                    <div class="form-check form-switch">
+                                        <input class="form-check-input" type="checkbox" id="featured" name="featured">
+                                        <label class="form-check-label" for="featured">Produto em destaque</label>
+                                    </div>
+                                    <div class="form-text">
+                                        Produtos em destaque aparecem na página inicial da loja.
+                                    </div>
+                                </div>
                             </div>
                         </div>
 
