--- a/views/shop/product/index.ejs
+++ b/views/shop/product/index.ejs
@@ -54,7 +54,7 @@
             
             <button 
                 class="btn btn-primary btn-lg w-100" 
-                onclick="addToCartDetail('<%= product.id %>', '<%= product.name %>', <%= product.price %>', '<%= product.images && product.images.length > 0 ? product.images[0].url : '' %>')"
+                onclick="addToCartDetail('<%= product.id %>', '<%= product.name %>', <%= product.price %>, '<%= product.images && product.images.length > 0 ? product.images[0].url : '' %>')"
             >
                 <i class="bi bi-cart-plus me-2"></i> Adicionar ao Carrinho
             </button>
